package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "aead_test_keyset",
    srcs = ["aead_test_keyset.json"],
)

cc_binary(
    name = "aead_cli",
    srcs = ["aead_cli.cc"],
    deps = [
        "//util",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/config:tink_config",
        "@tink_cc//tink/util:status",
    ],
)

sh_test(
    name = "aead_cli_test",
    size = "small",
    srcs = ["aead_cli_test.sh"],
    args = [
        "$(rootpath :aead_cli)",
        "$(rootpath :aead_test_keyset)",
    ],
    data = [
        ":aead_cli",
        ":aead_test_keyset",
    ],
)
