package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "aead_test_keyset",
    srcs = ["aead_test_keyset.json"],
)

cc_binary(
    name = "aead_cli",
    srcs = ["aead_cli.cc"],
    data = [":aead_test_keyset"],
    deps = [
        "//util",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/aead:config_v0",
    ],
)

sh_test(
    name = "aead_cli_test",
    size = "small",
    srcs = ["aead_cli_test.sh"],
    args = [
        "$(rootpath :aead_cli)",
        "$(rootpath :aead_test_keyset)",
    ],
    data = [
        ":aead_cli",
        ":aead_test_keyset",
    ],
)
