package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "aead_test_keyset",
    srcs = ["aead_test_keyset.json"],
)

cc_binary(
    name = "aead_cli",
    srcs = ["aead_cli.cc"],
    data = [":aead_test_keyset"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/aead:config_v0",
    ],
)

sh_test(
    name = "aead_cli_test",
    size = "small",
    srcs = ["aead_cli_test.sh"],
    args = [
        "$(rootpath :aead_cli)",
        "$(rootpath :aead_test_keyset)",
    ],
    data = [
        ":aead_cli",
        ":aead_test_keyset",
    ],
)
