package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "deterministic_aead_test_keyset",
    srcs = ["deterministic_aead_test_keyset.json"],
)

cc_binary(
    name = "deterministic_aead_cli",
    srcs = ["deterministic_aead_cli.cc"],
    data = [":deterministic_aead_test_keyset"],
    deps = [
        "//util",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@tink_cc//tink:deterministic_aead",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/daead:config_v0",
        "@tink_cc//tink/util:status",
    ],
)

sh_test(
    name = "deterministic_aead_cli_test",
    size = "small",
    srcs = ["deterministic_aead_cli_test.sh"],
    args = [
        "$(rootpath :deterministic_aead_cli)",
        "$(rootpath :deterministic_aead_test_keyset)",
    ],
    data = [
        ":deterministic_aead_cli",
        ":deterministic_aead_test_keyset",
    ],
)
