package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "deterministic_aead_test_keyset",
    srcs = ["deterministic_aead_test_keyset.json"],
)

cc_binary(
    name = "deterministic_aead_cli",
    srcs = ["deterministic_aead_cli.cc"],
    data = [":deterministic_aead_test_keyset"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:deterministic_aead",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/daead:config_v0",
        "@tink_cc//tink/util:status",
    ],
)

sh_test(
    name = "deterministic_aead_cli_test",
    size = "small",
    srcs = ["deterministic_aead_cli_test.sh"],
    args = [
        "$(rootpath :deterministic_aead_cli)",
        "$(rootpath :deterministic_aead_test_keyset)",
    ],
    data = [
        ":deterministic_aead_cli",
        ":deterministic_aead_test_keyset",
    ],
)
