package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "digital_signature_keyset",
    srcs = [
        "digital_signature_private_keyset.json",
        "digital_signature_public_keyset.json",
    ],
)

cc_binary(
    name = "digital_signatures_cli",
    srcs = ["digital_signatures_cli.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:public_key_sign",
        "@tink_cc//tink:public_key_verify",
        "@tink_cc//tink/signature:signature_config",
    ],
)

sh_test(
    name = "digital_signatures_cli_test",
    size = "small",
    srcs = ["digital_signatures_cli_test.sh"],
    args = [
        "$(rootpath :digital_signatures_cli)",
        "$(rootpaths :digital_signature_keyset)",
    ],
    data = [
        ":digital_signature_keyset",
        ":digital_signatures_cli",
    ],
)
