package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "hybrid_test_keyset",
    srcs = [
        "hybrid_test_private_keyset.json",
        "hybrid_test_public_keyset.json",
    ],
)

cc_binary(
    name = "hybrid_cli",
    srcs = ["hybrid_cli.cc"],
    data = [":hybrid_test_keyset"],
    deps = [
        "//util:util",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@tink_cc//tink:hybrid_decrypt",
        "@tink_cc//tink:hybrid_encrypt",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/hybrid:hpke_config",
        "@tink_cc//tink/hybrid:hybrid_config",
        "@tink_cc//tink/util:status",
    ],
)

sh_test(
    name = "hybrid_cli_test",
    size = "small",
    srcs = ["hybrid_cli_test.sh"],
    args = [
        "$(rootpath :hybrid_cli)",
        "$(rootpaths :hybrid_test_keyset)",
    ],
    data = [
        ":hybrid_cli",
        ":hybrid_test_keyset",
    ],
)
