package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_binary(
    name = "hybrid_cli",
    srcs = ["hybrid_cli.cc"],
    deps = [
        "//util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:hybrid_decrypt",
        "@tink_cc//tink:hybrid_encrypt",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/hybrid:hpke_config",
        "@tink_cc//tink/hybrid:hybrid_config",
    ],
)

sh_test(
    name = "hybrid_cli_test",
    size = "small",
    srcs = ["hybrid_cli_test.sh"],
    args = [
        "$(rootpath :hybrid_cli)",
        "$(rootpaths //hybrid_encryption/testdata:hpke_test_keyset)",
    ],
    data = [
        ":hybrid_cli",
        "//hybrid_encryption/testdata:hpke_test_keyset",
    ],
)
